--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -9,10 +9,9 @@
 
 
 .footer_inner_container {
-    width: 60%;
+    width: 70%;
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
 }
 
 /* Social Media Icons */
@@ -20,7 +19,7 @@
     display: flex;
     justify-content: start;
     gap: 1.5rem;
-    margin-left: 10px;
+    margin-left: 2rem;
     color: #fff;
     margin-bottom: 1rem;
     font-size: 1.5rem;
@@ -36,14 +35,13 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    width: 100%;
-    /* text-align: center; */
+    width: 90%;
     margin-bottom: 1rem;
 }
 
 .footer_data div {
     flex: 1;
-    min-width: 150px;
+    /* min-width: 150px; */
     padding: 0.5rem;
 }
 
@@ -70,11 +68,9 @@
 /* Service Code */
 .service_code {
     border: 1px solid #fff;
-    max-width: 150px;
     text-align: center;
     width: 15%;
-    padding: 0.25rem;
-    margin: .8rem 0;
+    margin: .8rem 0 0.8rem 2rem;
     cursor: pointer;
     font-size: 0.9rem;
     transition: background-color 0.3s ease, color 0.3s ease;
@@ -88,26 +84,35 @@
 /* Copyright */
 .copy_write {
     font-size: 0.8rem;
-    margin-bottom: 1rem;
+    margin: 0 0 1rem 2rem;
 }
 
 /* Responsive Design */
 @media (max-width: 768px) {
-    .footer_inner_container {
+    /* .footer_outer_container {
+        width: 100%;
+    } */
+    /* .footer_inner_container {
         width: 80%;
+    } */
+
+     .footer_icons {
+        justify-content: center;
     }
 
     .footer_data {
         flex-direction: column;
         align-items: center;
     }
-
+.footer_data ul li {
+    font-size: 0.7rem;
+}
     .footer_data div {
         text-align: center;
     }
 
     .service_code {
-        width: 80%;
+        width: 50%;
     }
 }
 
@@ -119,10 +124,11 @@
     .footer_icons {
         font-size: 1.2rem;
         gap: 1rem;
+        justify-content: center;
     }
 
     .footer_data ul li {
-        font-size: 0.8rem;
+        font-size: 0.5rem;
     }
 
     .copy_write {
