--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(20, 20, 20); 
+  background-color: rgb(20, 20, 20);
   height: 10vh;
   color: white;
   transition: all 0.5s ease-in;
@@ -26,7 +26,7 @@
 
 /* Left Section */
 .header_left {
-  width: 140%;
+  width: 80%;
   display: flex;
 }
 
@@ -77,7 +77,10 @@
 }
 
 /* Responsive Design */
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
+  .header_container {
+    justify-content: space-between;
+  }
   .header_container {
     width: 95%;
   }
@@ -94,10 +97,6 @@
 }
 
 @media (max-width: 480px) {
-  .header_container {
-    flex-direction: column;
-    align-items: flex-start;
-  }
 
   .header_left ul {
     flex-direction: column;
@@ -110,5 +109,36 @@
 
   .header_left ul li {
     margin-bottom: 0.5rem;
+  }
+} */
+
+@media (max-width: 480px) {
+  .header_container {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .header_left,
+  .header_right {
+    width: 100%;
+    justify-content: center;
+  }
+
+  .header_left ul,
+  .header_right ul {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .header_left ul li,
+  .header_right ul li {
+    margin: 0.5rem 0;
+  }
+}
+
+@media (max-width: 480px) {
+  .header_left img {
+    max-width: 4rem;
   }
 }
