--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,10 @@
     padding: 0;
     box-sizing: border-box
 }
+body {
+    background-color: #111;
+    color: white;
+}
+img {
+  max-width: 100%;
+}
