--- a/src/components/Rows/Row/Row.module.css
+++ b/src/components/Rows/Row/Row.module.css
@@ -7,7 +7,8 @@
     cursor: pointer;
 }
 .row__posters {
-    display: flex;overflow-y: hidden;
+    display: flex;
+    overflow-y: hidden;
     overflow-x: scroll;
     padding: 1.25rem;
 }
@@ -24,6 +25,8 @@
     transform: scale(1.09);
 }
 .row {
-    margin-left: 1.25rem;
+    padding: 1.25rem;
+    margin-top: 1rem;
     color: white;
+    background-color: black;
 }
