--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,11 @@
 
 .nav-wrapper {
+  background: transparent;
   background: rgba(0, 0, 0, 0.8);
   font-size: 0.85em;
   font-weight: 200;
+  position: sticky;
+  top: 0;
 }
 .nav-wrapper ul li a {
   color: #fff;
