--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -3,7 +3,7 @@
     height: 80vh;
     /* padding-left: 1rem; */
     margin-bottom: -4rem;
-    color: #585757;
+    color: white;
     object-fit: contain;
 }
 .banner__contents {
